--- a/index.html
+++ b/index.html
@@ -4,26 +4,10 @@
     <meta charset="utf-8">
     <title>Калькултор</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="shortcut icon" href="http://example.com/myicon.ico"/>
   </head>
   <body>
     <h1 id="app-name">Расчет площади пола</h1>
-    <svg
-        id="home"
-        class="picture"
-        version="1.1"
-        xmlns="http://www.w3.org/2000/svg"
-        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-        width="612px" height="502.174px"
-        viewBox="0 65.326 612 502.174"
-        enable-background="new 0 65.326 612 502.174"
-        xml:space="preserve">
-        <ellipse
-            class="ground"
-            cx="283.5"
-            cy="487.5"
-            rx="259"
-            ry="80"
-        />
-    </svg>
+    
   </body>
 </html>
