fix: favicon path

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Калькултор</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="shortcut icon" href="http://example.com/myicon.ico"/>
+    <link rel="shortcut icon" href="favicon.ico"/>
   </head>
   <body>
     <h1 id="app-name">Расчет площади пола</h1>
-    
+
   </body>
 </html>
