--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Калькултор</title>
+    <title>Калькулятор</title>
     <link rel="stylesheet" href="main.css">
     <link rel="shortcut icon" href="favicon.ico"/>
   </head>
   <body>
     <h1 id="app-name">Расчет площади пола</h1>
+    <h2>Выбор помещения</h2>
+    <p>rechteck</p>
+    <p>eckeRechts</p>
+    <p>ausschnittMitte</p>
+    <p>mitErker</p>
+    <h2>Ваши размеры</h2>
+    <p>Ширина:</p>
+    <p>Высота:</p>
 
   </body>
 </html>
